--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,26 +1,8 @@
-// --------------------------------
-// BaseKit Baseplate Theme (v2.0)
-// --------------------------------
-
-// -----------------------------
-// #Table of Contents
-// -----------------------------
-
-// 1. #LESS INCLUDES
-// 2. #PAGE SETTINGS
-// 3. #TEMPLATE STYLES
-
-
-
-
 // -----------------------------
 // 1. #LESS Includes
-
 // -----------------------------
-@import "@{templateCommon}/bk-less-framework-v8.less"; // BaseKit LESS Framework
 
-// ** BaseKit LESS Framework is a set of non obtrusive LESS files that can be pulled into
-//    your template to guarentee widgets come to life. Proivides default styles for all widgets.
+@import "@{templateCommon}/bk-less-framework-v8.less"; // BaseKit LESS Framework
 
 // Template Includes
 @import "@{templateLocal}/less/theme.less"; // Theme
@@ -34,17 +16,13 @@
 @import "@{templateLocal}/less/plugins/plugin-ecommerce.less"; // Plugin: Ecommerce CSS
 
 
-
-@bp-global-large:   ~"only screen and (min-width : 1200px)";
-@bp-global-medium:  ~"only screen and (min-width : 851px) and (max-width : 1200px)";
-@bp-global-small:   ~"only screen and (max-width : 850px)";
+@bp-global-large: ~"only screen and (min-width : 1200px)";
+@bp-global-medium: ~"only screen and (min-width : 851px) and (max-width : 1200px)";
+@bp-global-small: ~"only screen and (max-width : 850px)";
 
 // -----------------------------
 // 2. #Page Settings **
 // -----------------------------
-
-// ** Styles for advanced Baseplate template - remove when developing a custom template
-
 
 // Body
 // --------------
@@ -116,10 +94,6 @@ body {
 
 // #Default Page
 // -------------
-
-
-.bk-pt-default .container {
-}
 
 // Default Page Title
 .template-title {
@@ -241,7 +215,6 @@ body {
     }
 }
 
-
 .flex-item.flex-product-search input[type="search"] {
     border: 0;
     border-bottom: 1px solid darken(@color-swatch1,10%);
@@ -255,8 +228,6 @@ body {
 .ecomproductslist__button {
     background-color: transparent;
 }
-
-
 
 
 // -----------------------------
@@ -276,11 +247,8 @@ body {
 }
 
 
-
-
 // -----------------------------
 // 4. #Variables
 // -----------------------------
 
 @import "@{templateLocal}/less/variables.less";
-//@import "@{templateLocal}/bk-v8-test.less";
